# qk-sniffer

./: .gitignore  .python-version  README.md  pyproject.toml  requirements-pinned.txt  setup.cfg  sniff.py
configs/: chatglm3-6b-128k.yaml  glm4-9b-chat.yaml  llama2-7b.yaml  qwen2-7b.yaml  qwen3-8b-yarn4x.yaml  qwen3-8b.yaml  sample.yaml  sample_sniff.yaml  smollm2-1.7b.yaml  smollm2-135m.yaml  smollm2-2.2b-instruct.yaml  smollm2-360m-fineweb-edu-sample-10bt-l06-pre-rope.yaml  smollm2-360m-tr512-pre-rope.yaml  smollm2-360m-tr512.yaml  smollm2-360m.yaml
configs/attention-plasticity/: llama3.1-8b.yaml  llama3.2-11b.yaml  llama3.2-1b.yaml  llama3.2-3b.yaml  ministral3-14b.yaml  ministral3-3b.yaml  ministral3-8b.yaml  mistral-v0.2-7b.yaml  qwen3-0.6b-b1.yaml  qwen3-0.6b-b2.yaml  qwen3-0.6b.yaml  qwen3-1.7b.yaml  qwen3-14b.yaml  qwen3-4b.yaml  qwen3-8b.yaml
models/: __init__.py
models/gemma3/: __init__.py  modeling_gemma3.py
models/glm/: modeling_glm.py
models/glm4/: modeling_glm4.py
models/llama/: __init__.py  modeling_llama.py
models/ministral/: __init__.py  modeling_ministral.py
models/ministral3/: __init__.py  modeling_ministral3.py
saver/: dataset.py  readme.py
scripts/: create_long_context_source.py  verify_transformers_alignment.py
sniffer/: __init__.py  core.py  samplers.py  utils.py
tests/: test_cli_refresh.py  test_cli_workflow.py  test_config.py  test_glm.py  test_glm4.py  test_ministral.py  test_ministral3.py  test_mllama.py  test_models.py  test_qwen2.py  test_qwen3.py  test_saver.py  test_smollm3.py  test_sniffer.py
(+18 files in other folders)
